--- a/boards/shields/glove43tb/glove43tb_L.conf
+++ b/boards/shields/glove43tb/glove43tb_L.conf
@@ -8,6 +8,9 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 CONFIG_ZMK_POINTING=y
 
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
+
 ## Xiao LED ##
 # references: https://github.com/caksoylar/zmk-rgbled-widget?tab=readme-ov-file#configuration-details
 CONFIG_RGBLED_WIDGET=y
